<resources>
    <string name="app_name">Weather</string>

    <string name="degrees_celsius_sign" translatable="false">°C</string>
    <string name="value_in_degrees" translatable="false">%1$d°C</string>
    <string name="percentage_value" translatable="false">%1$d%%</string>

    <string name="pressure_in_mm_hg">%1$d mm Hg</string>
    <string name="wind_in_mps">%1$d m/s, </string>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="precipitation_probability">Precipitation\nprobability</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="try_again_message">Something went wrong. Try again later.</string>
    <string name="set_as_current">Set as current</string>
    <string name="share">Share</string>

    <string name="weather_icon_description">Weather icon</string>
    <string name="set_as_current_description">Set as current city</string>
    <string name="share_description">Share weather forecast</string>
    <string name="current_city_description">Change current city</string>
    <string name="weather_forecast_tabs_description">Weather forecast tabs</string>

    <string name="internet_connection_error">Can\'t load forecast. Check the internet connection and try again</string>
    <string name="network_error">Can\'t load remote data</string>
    <string name="updating">Updating</string>
    <string name="storage_error">Can\'t load local data</string>
    <string name="try_again">Try again</string>
    <string name="updated">Forecast is up to date</string>
    <string name="share_error">Can\'t share forecast</string>
    <string name="current_city_error">No current city</string>
    <string name="error">Error</string>

    <string name="current_weather_channel">Current weather</string>
    <string name="current_weather_channel_description">Show current weather</string>

    <string name="direction_n">N</string>
    <string name="direction_ne">NE</string>
    <string name="direction_e">E</string>
    <string name="direction_se">SE</string>
    <string name="direction_s">S</string>
    <string name="direction_sw">SW</string>
    <string name="direction_w">W</string>
    <string name="direction_nw">NW</string>

</resources>